--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "save-dev": "^0.0.1-security",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.5"
   },
   "browser": {
