--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/system": "^4.12.1",
     "@types/styled-components": "^5.1.23",
+    "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
