--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@material-ui/system": "^4.12.1",
     "@types/styled-components": "^5.1.23",
     "axios": "^0.26.0",
+    "material-icons": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
