--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
     "file-loader": "^6.2.0",
@@ -41,6 +42,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.2",
     "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5"
