--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@material-ui/system": "^4.12.1",
     "@types/styled-components": "^5.1.23",
     "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
     "material-icons": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -45,7 +46,8 @@
     "react-router-dom": "^6.2.2",
     "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "yup": "^0.32.11"
   },
   "browser": {
     "[module-name]": false
