--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bootstrap": "^5.1.3",
     "material-icons": "^1.10.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
