--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
+    "redux": "^4.1.2",
     "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
