--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
