--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "webpack": "webpack",
     "start": "webpack server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production"
+
   },
   "keywords": [],
   "author": "",
