--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
-  "presets": ["@babel/env", "@babel/react", "@babel/preset-typescript"],
+  "presets": ["@babel/preset-env",
+    "@babel/preset-react", "@babel/preset-typescript"
+  ],
   "plugins": ["@babel/plugin-proposal-class-properties"]
 }
