--- a/package.json
+++ b/package.json
@@ -35,8 +35,12 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/system": "^4.12.1",
+    "@mui/material": "^5.10.5",
+    "@mui/system": "^5.10.5",
     "@types/styled-components": "^5.1.23",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
