--- a/package.json
+++ b/package.json
@@ -6,29 +6,47 @@
   "scripts": {
     "webpack": "webpack",
     "start": "webpack server",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "format": "prettier --write \"src/**/*{.ts,.tsx}\"",
+    "lint": "eslint \"src/**/*{.ts,.tsx}\" --quiet",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.22.11",
     "@babel/node": "^7.16.8",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.16.7",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^29.5.4",
+    "@types/react": "^17.0.65",
+    "@types/react-dom": "^17.0.20",
     "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "babel-jest": "^29.6.4",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^8.1.0",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "path": "^0.12.7",
+    "prettier": "^3.0.2",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.6",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
