--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@material-ui/system": "^4.12.1",
     "@mui/material": "^5.10.5",
     "@mui/system": "^5.10.5",
+    "@testing-library/user-event": "^14.4.3",
     "@types/styled-components": "^5.1.23",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
