--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --mode production",
     "format": "prettier --write \"src/**/*{.ts,.tsx}\"",
     "lint": "eslint \"src/**/*{.ts,.tsx}\" --quiet",
-    "test": "jest"
+    "test": "jest -u"
   },
   "keywords": [],
   "author": "",
@@ -21,12 +21,15 @@
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.4",
     "@types/react": "^17.0.65",
     "@types/react-dom": "^17.0.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "babel-jest": "^29.6.4",
@@ -45,6 +48,7 @@
     "jest-environment-jsdom": "^29.6.4",
     "path": "^0.12.7",
     "prettier": "^3.0.2",
+    "redux-mock-store": "^1.5.4",
     "style-loader": "^3.3.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.6",
@@ -59,7 +63,6 @@
     "@material-ui/system": "^4.12.1",
     "@mui/material": "^5.10.5",
     "@mui/system": "^5.10.5",
-    "@testing-library/user-event": "^14.4.3",
     "@types/styled-components": "^5.1.23",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
