--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.16.7",
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^12.0.0",
@@ -64,14 +65,16 @@
     "@material-ui/system": "^4.12.1",
     "@mui/material": "^5.10.5",
     "@mui/system": "^5.10.5",
+    "@tanstack/react-query": "^5.40.1",
     "@types/styled-components": "^5.1.23",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "material-icons": "^1.10.7",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.2.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.3",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "redux": "^4.1.2",
